--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,17 @@ dependencies {
   def guiceVersion = '3.0'
   
   compile "com.google.inject:guice:${guiceVersion}"
+  compile "com.google.guava:guava:13.0.1"
   
   testCompile "org.hamcrest:hamcrest-all:1.3"
   testCompile "org.mockito:mockito-all:1.9.5"
   testCompile 'junit:junit:4.11'
+}
+
+
+task runExample01(dependsOn: 'classes', type: JavaExec) {
+  main = 'com.jordi9.guice.example01.ShowtimesLauncher'
+  classpath = sourceSets.main.runtimeClasspath
 }
 
 task wrapper(type: Wrapper) {
